--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -7,17 +7,17 @@
 #left{
 	background:#ccf;
 	box-sizing:border-box;
-	float:left;
+	float:left
 }
 #right{
 	background:#fcc;
 	box-sizing:border-box;
-	float:left;
+	float:center;
 }
 #center{
 	background:#cfc;
 	box-sizing:border-box;
-	float:left;
+	float:right;
 }
 </style>
 </head>
