--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -7,17 +7,18 @@
 #left{
 	background:#ccf;
 	
-	float:left
+	
 }
 #right{
 	background:#fcc;
+	float:right
 	
-	float:center;
+	
 }
 #center{
 	background:#cfc;
 	
-	float:right;
+	
 }
 </style>
 </head>
