--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -6,18 +6,18 @@
 <style type="text/css">
 #left{
 	background:#ccf;
-	
+	box-sizing:border-box;
 	
 }
 #right{
 	background:#fcc;
-	float:right
+	box-sizing:border-box;
 	
 	
 }
 #center{
 	background:#cfc;
-	
+	box-sizing:border-box;
 	
 }
 </style>
