--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -7,12 +7,12 @@
 #left{
 	background:#ccf;
 	box-sizing:border-box;
-	
+	width:200px;
 }
 #right{
 	background:#fcc;
 	box-sizing:border-box;
-	
+	width:200px;
 	
 }
 #center{
