--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -20,7 +20,8 @@
 #center{
 	background:#cfc;
 	box-sizing:border-box;
-	margin-left:600px;
+	margin-left:10px;
+	margin-right:10px;
 	width: 1600px;
 }
 </style>
