--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -21,8 +21,8 @@
 	background:#cfc;
 	box-sizing:border-box;
 	margin-left:210px;
-	margin-right:870px;
-	width:1200px;
+	margin-right:auto;
+	width:auto;
 }
 </style>
 </head>
