--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -21,7 +21,7 @@
 	background:#cfc;
 	box-sizing:border-box;
 	margin-left:210px;
-	margin-right:auto;
+	margin-right:1710;
 	width:auto;
 }
 </style>
