--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -1,1 +1,58 @@
-
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Использование float при построении колонок</title>
+<style type="text/css">
+#left{
+	background:#ccf;
+	box-sizing:border-box;
+	float:left;
+	width:200px;
+}
+#right{
+	background:#fcc;
+	box-sizing:border-box;
+	width:200px;
+	float:right;
+	
+}
+#center{
+	background:#cfc;
+	box-sizing:border-box;
+	margin-left:210px;
+	margin-right:210px;
+	width:600px;
+}
+.wrapper{
+  min-width:1200px;
+}
+#colonka1{
+  display:inline-block;
+  vertical-align:top;
+  width:400px;
+}
+#colonka2{
+  display:inline-block;
+  vertical-align:top;
+  width:400px;
+}
+#colonka3{
+  display:inline-block;
+  vertical-align:top;
+  width:400px;
+}
+</style>
+</head>
+<body>
+	<div id="left">left<br>left<br>left<br>left<br>left</div>
+	<div id="right">right<br>right<br>right<br>right</div>
+	<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
+  <div class ="wrapper">
+    <div id ="colonka1">text text text text text text text </div>
+    <div id ="colonka2">text text text text text text text </div>
+    <div id ="colonka3">text text text text text text text </div>
+  </div>
+  
+</body>
+</html>
