--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -50,12 +50,13 @@
 <body>
 	<div id="left">left<br>left<br>left<br>left<br>left</div>
 	<div id="right">right<br>right<br>right<br>right</div>
-	<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
-  	<div class ="wrapper">
-    		<div id ="colonka1">text text text text text text text </div>
-    		<div id ="colonka2">text text text text text text text </div>
-    		<div id ="colonka3">text text text text text text text </div>
+	<div class ="wrapper">
+    		<div id ="colonka1">text<br>text<br>text<br>text<br>text<br>text<br>text </div>
+    		<div id ="colonka2">text<br>text<br>text<br>text<br>text<br>text<br>text </div>
+    		<div id ="colonka3">text<br>text<br>text<br>text<br>text<br>text<br>text </div>
   	</div>
+	<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
+  	
   
 </body>
 </html>
