--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -25,39 +25,23 @@
 	width:600px;
 }
 .wrapper{
-  min-width:600px;
-}
-#colonka1{
-	background:yellow;
+	min-width:1000px;
   	display:inline-block;
-  	vertical-align:top;
- 	width:200px;
+	vertical-align:top;
+	box-sizing:border-box;
+	font-size: 14px;
 }
-#colonka2{
-	background:yellow;	
- 	display:inline-block;
-  	vertical-align:top;
-  	width:200px;
-}
-#colonka3{
-	background:yellow;
-  	display:inline-block;
-  	vertical-align:top;
-  	width:200px;
-}
+
 </style>
 </head>
 <body>
-	
-	<div id="left">left<br>left<br>left<br>left<br>left</div>
-		<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
 	<div class ="wrapper">
-		<div id ="colonka1">text<br>text<br>text<br>text<br>text<br>text<br>text </div>
-		<div id ="colonka2">text<br>text<br>text<br>text<br>text<br>text<br>text </div>
-    		<div id ="colonka3">text<br>text<br>text<br>text<br>text<br>text<br>text </div>
-  
-	</div>
+		
+	
+		<div id="left">left<br>left<br>left<br>left<br>left</div>
+		<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
+	
 		<div id="right">right<br>right<br>right<br>right</div>
-
+	</div>
 </body>
 </html>
