--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -1,47 +1,70 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Использование float при построении колонок</title>
-<style type="text/css">
-#left{
-	background:#ccf;
-	box-sizing:border-box;
-	float:left;
-	width:200px;
-}
-#right{
-	background:#fcc;
-	box-sizing:border-box;
-	width:200px;
-	float:right;
-	
-}
-#center{
-	background:#cfc;
-	box-sizing:border-box;
-	margin-left:210px;
-	margin-right:210px;
-	width:600px;
-}
-.wrapper{
-	min-width:1000px;
-  	display:inline-block;
-	vertical-align:top;
-	box-sizing:border-box;
-	font-size: 14px;
-}
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Использование inline-block</title>
 
-</style>
-</head>
-<body>
-	<div class ="wrapper">
-		
-	
-		<div id="left">left<br>left<br>left<br>left<br>left</div>
-		<div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
-	
-		<div id="right">right<br>right<br>right<br>right</div>
-	</div>
-</body>
+    <style>
+      .wrap {
+        min-width: 1040px;
+      }
+
+      #left,
+      #right,
+      #center {
+        display: inline-block;
+        vertical-align: top;
+        box-sizing: border-box;
+      }
+
+      #left {
+        background: #ccf;
+        width: 200px;
+        margin-right: 10px;
+      }
+
+      #right {
+        background: #fcc;
+        width: 200px;
+        margin-left: 10px;
+      }
+
+      #center {
+        background: #cfc;
+        width: 600px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="wrap">
+      <div id="left">left<br />left<br />left<br />left<br />left</div>
+      <div id="center">
+        center text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text
+        text text text text
+      </div>
+      <div id="right">right<br />right<br />right<br />right</div>
+    </div>
+  </body>
 </html>
