--- a/lab5/lab5_5.html
+++ b/lab5/lab5_5.html
@@ -11,7 +11,7 @@
             padding: 10px; 
         }
 
-        .grid-container {
+        .container {
             display: grid; 
             grid-template-columns: 200px 1fr 200px; 
             gap: 10px; 
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <div class="grid-container">
+    <div class="container">
         <div id="left">left<br>left<br>left<br>left<br>left</div>
         <div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
         <div id="right">right<br>right<br>right<br>right</div>
