--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
   <li><a href ="lab5/lab5_5.html">Задание 5</a></li> 
 </ul>
   </li>
+   <h2>Лабораторная работа №6</h2>
+    <ol>
+        <li><a href="https://github.com/kostikove/mamon">Задание 1</a></li>
+        <li><a href="https://kostikove.github.io/mamon/">Задание 2</a></li>
+        
+    </ol>
 </ol>
 </body>
 
