--- a/lab5/lab5_4.html
+++ b/lab5/lab5_4.html
@@ -23,6 +23,7 @@
         #left-flex {
             width: 200px; 
             background: #ccf; 
+            display:flex;
         }
 
         #center-flex {
@@ -34,6 +35,7 @@
         #right-flex {
             width: 200px; 
             background: #fcc; 
+            display:flex;
         }
     </style>
 </head>
