--- a/lab5/lab5_4.html
+++ b/lab5/lab5_4.html
@@ -21,7 +21,8 @@
         }
 
         #left-flex {
-            width: 200px; 
+            box-sizing:border-box;
+	        width:200px;
             background: #ccf; 
             display:flex;
         }
@@ -33,7 +34,8 @@
         }
 
         #right-flex {
-            width: 200px; 
+            box-sizing:border-box;
+	        width:200px; 
             background: #fcc; 
             display:flex;
         }
