--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -1,1 +1,54 @@
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Сайт</title>
+  <!-- Подключение Bootstrap 5 через CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+  </style>
+</head>
+  <body>
+<div class="container">
+    <!-- Шапка сайта -->
+    <header>
+      <h1>Добро пожаловать!</h1>
+      <p>Это мой сайт-визитка</p>
+      <!-- Навигационная шапка -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bs-menu" aria-controls="bs-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="bs-menu">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Главная</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#main">О себе</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#method">Увлечения</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#work">Достижения</a>
+              </li>
+            </ul>
+            
+          </div>
+        </div>
+      </nav>
+    </header>
 
+    
+  </body>
+ <footer>
+    <p>&copy; Kostikov.Inc</p>
+  </footer>
+  
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
