--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         <li><a href="https://kostikove.github.io/mamon/">Задание 2</a></li>
   </ul>
    </li>
+
+   <li> <p>Лабораторная работа №7</p>
+  <ul>
+        <li><a href="lab7/lab7.html">Задание 1</a></li>
+        
+  </ul>
+   </li>
     </ol>
 </ol>
 </body>
