--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -103,9 +103,9 @@
                 </div>
                 <div class="col-lg-7">
                     <h2 class="section-title">Обо мне</h2>
-                    <p class="lead">Привет, я Алексей Петров — профессиональный веб-разработчик с 5-летним опытом.</p>
-                    <p>Специализируюсь на создании современных и адаптивных веб-сайтов. Моя цель — помочь клиентам воплотить их идеи в качественные цифровые продукты.</p>
-                    <p>Имею опыт работы с HTML, CSS, JavaScript, React, Node.js и различными CMS. Постоянно совершенствую свои навыки и слежу за новыми тенденциями в веб-разработке.</p>
+                    <p class="lead">Привет, я .</p>
+                    <p>Занимаюсь программированием на разных языках, музыкой и обработкой видео.</p>
+                    <p>Имею опыт работы с HTML, CSS, JavaScript,Adobe,Ableton, Fl Studio. Постоянно совершенствую свои навыки и слежу за новыми тенденциями в, интересующих меня, свферах.</p>
                     
                     <div class="row mt-4">
                         <div class="col-md-6">
