--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -243,16 +243,16 @@
                     <div class="row mt-4">
                         <div class="col-md-6">
                             <ul class="list-unstyled">
-                                <li class="mb-2"><strong>Имя:</strong> Алексей Петров</li>
-                                <li class="mb-2"><strong>Возраст:</strong> 28 лет</li>
-                                <li class="mb-2"><strong>Город:</strong> Москва</li>
+                                <li class="mb-2"><strong>Имя:</strong> Егор</li>
+                                <li class="mb-2"><strong>Возраст:</strong> 19 лет</li>
+                                <li class="mb-2"><strong>Город:</strong> Орёл</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <ul class="list-unstyled">
-                                <li class="mb-2"><strong>Email:</strong> alex@example.com</li>
+                                <li class="mb-2"><strong>Email:</strong> egor@example.com</li>
                                 <li class="mb-2"><strong>Телефон:</strong> +7 (123) 456-7890</li>
-                                <li class="mb-2"><strong>Фриланс:</strong> Доступен</li>
+                                
                             </ul>
                         </div>
                     </div>
