--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -232,7 +232,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 text-center mb-4 mb-lg-0">
-                    <img src="https://via.placeholder.com/350x350" alt="Фото профиля" class="profile-img">
+                    <img src="images/fotka.jpg" alt="Фото профиля" class="profile-img">
                 </div>
                 <div class="col-lg-7">
                     <h2 class="section-title">Обо мне</h2>
