--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -267,7 +267,7 @@
                 <!-- Работа 1 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item">
-                        <img src="images/Horror" alt="Проект 1" class="portfolio-img">
+                        <img src="images/Horror.png" alt="Проект 1" class="portfolio-img">
                         <div class="portfolio-overlay">
                             <h5>Игра</h5>
                             <p>Первая версия хоррор-игры</p>
