--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -279,10 +279,10 @@
                 <!-- Работа 2 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/600x400" alt="Проект 2" class="portfolio-img">
+                        <img src="images/web_page.png" alt="Проект 2" class="portfolio-img">
                         <div class="portfolio-overlay">
-                            <h5>Сайт</h5>
-                            <p>Информационная страничка о космических телах</p>
+                            <h5>Организационный Сайт</h5>
+                            <p>Веб-сайт для поликлинники</p>
                             <a href="#" class="btn btn-sm btn-outline-light">Подробнее</a>
                         </div>
                     </div>
