--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -236,7 +236,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h2 class="section-title">Обо мне</h2>
-                    <p class="lead">Привет, я .</p>
+                    <p class="lead">Привет, я студент 2-го курса. Учусь в Орловском государственном университете им. И.С.Тургенева.</p>
                     <p>Занимаюсь программированием на разных языках, музыкой и обработкой видео.</p>
                     <p>Имею опыт работы с HTML, CSS, JavaScript,Adobe,Ableton, Fl Studio. Постоянно совершенствую свои навыки и слежу за новыми тенденциями в, интересующих меня, свферах.</p>
                     
@@ -283,6 +283,17 @@
                         <div class="portfolio-overlay">
                             <h5>Организационный Сайт</h5>
                             <p>Веб-сайт для поликлинники</p>
+                            <a href="#" class="btn btn-sm btn-outline-light">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+               <!-- Работа 3 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item">
+                        <img src="images/music.JPG" alt="Проект 3" class="portfolio-img">
+                        <div class="portfolio-overlay">
+                            <h5>Музыка</h5>
+                            <p>На данный момент мои треки ещё нигде не опубликованы, кроме платформы YouTube </p>
                             <a href="#" class="btn btn-sm btn-outline-light">Подробнее</a>
                         </div>
                     </div>
