--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -279,7 +279,7 @@
                 <!-- Работа 2 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item">
-                        <img src="images/web_page.png" alt="Проект 2" class="portfolio-img">
+                        <img src="images/web_page.PNG" alt="Проект 2" class="portfolio-img">
                         <div class="portfolio-overlay">
                             <h5>Организационный Сайт</h5>
                             <p>Веб-сайт для поликлинники</p>
@@ -290,7 +290,7 @@
                <!-- Работа 3 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item">
-                        <img src="images/music.jpg" alt="Проект 3" class="portfolio-img">
+                        <img src="images/music.JPG" alt="Проект 3" class="portfolio-img">
                         <div class="portfolio-overlay">
                             <h5>Музыка</h5>
                             <p>На данный момент мои треки ещё нигде не опубликованы, кроме платформы YouTube </p>
