--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -239,7 +239,7 @@
    <section id="about" class="py-5">
         <div class="container">
   
-            <img src="images.fotka.jpg" alt="Фото профиля" class="profile-img">
+            <img src="images/fotka.jpg" alt="Фото профиля" class="profile-img">
                 </div>
                 <div class="about-content">
                 <h2 class="section-title">Обо мне</h2>
