--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -150,6 +150,7 @@
             background-color: #2c3e50;
             color: white;
             padding: 3rem 0;
+            width:100%;
         }
         
         .social-icons a {
@@ -353,7 +354,7 @@
             </div>
             
             <div class="text-center copyright">
-                <p class="mb-0">&copy; 2023 Алексей Петров. Все права защищены.</p>
+                <p class="mb-0">&copy; 2025г. Все права защищены.</p>
             </div>
         </div>
     </footer>
