--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -150,7 +150,13 @@
             background-color: #2c3e50;
             color: white;
             padding: 3rem 0;
-            width:100%;
+            width: 100%;
+        }
+        
+        .footer-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
         }
         
         .social-icons a {
