--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -26,7 +26,11 @@
             min-height: 100vh;
             margin: 0;
         }
-        
+        .container{
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
+        }
        
         .navbar {
             padding: 1rem 0;
