--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -130,6 +130,9 @@
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
         
         .portfolio-item:hover {
