--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -300,7 +300,7 @@
                 <!-- Работа 1 -->
                 <div class="col-md-4 d-flex">
                   
-                    <div class="portfolio-item card h-100">
+                    <div class="portfolio-item ">
                       <div class="portfolio-img-container">
                         <img src="images/Horror.png" alt="Проект 1" class="portfolio-img">
                         <div class="portfolio-overlay">
@@ -315,7 +315,7 @@
                 <!-- Работа 2 -->
                 <div class="col-md-4 d-flex">
                   
-                    <div class="portfolio-item card h-100">
+                    <div class="portfolio-item ">
                       <div class="portfolio-img-container">
                         <img src="images/web_page.PNG" alt="Проект 2" class="portfolio-img">
                         <div class="portfolio-overlay ">
@@ -327,7 +327,7 @@
                 </div>
                <!-- Работа 3 -->
                 <div class="col-md-4 d-flex">
-                    <div class="portfolio-item card h-100">
+                    <div class="portfolio-item ">
                       <div class="portfolio-img-container">
                         <img src="images/music.JPG" alt="Проект 3" class="portfolio-img">
                         <div class="portfolio-overlay">
