--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -121,6 +121,7 @@
         
         #portfolio {
             padding: 5rem 0;
+          width:100%;
         }
         
         .portfolio-item {
