--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -341,7 +341,9 @@
                     </div>
                 </div>
              </div>
-          
+            </div>
+        </div>
+   </section>      
      
  <!-- Футер -->
     <footer class="full-width-footer">
