--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -240,6 +240,9 @@
             margin-top: 2rem;
             color: #adb5bd;
         }
+       .footer-name {
+        margin-bottom: 1rem; 
+    }
         
         /* Адаптация для мобильных */
         @media (max-width: 992px) {
@@ -389,7 +392,7 @@
         <div class="footer-content">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <h4 class="mb-4">Егор Костиков</h4>
+                    <h4 class="footer-name mb-4">Егор Костиков</h4>
                   
                     <div class="social-icons mt-4">
                         <a href="#"><i class="fab fa-vk"></i></a>
