--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -344,7 +344,7 @@
                         </div>
                         <div class="portfolio-caption">
                             <h5>Игра</h5>
-                            <p>Первая версия хоррор-игры</p>
+                            <p>Мой проект в виде хоррор-игры "ТерВер3D" где главному персонажу нужно спастись и сдать Теорию Вероятностей!</p>
                         </div>
                     </div>
                 </div>
@@ -362,7 +362,7 @@
                         </div>
                         <div class="portfolio-caption">
                             <h5>Организационный Сайт</h5>
-                            <p>Веб-сайт для поликлинники</p>
+                            <p>Веб-сайт с базой данных о болезнях и карточках пациентов областных клиник </p>
                         </div>
                     </div>
                 </div>
@@ -380,7 +380,7 @@
                         </div>
                         <div class="portfolio-caption">
                             <h5>Музыка</h5>
-                            <p>На данный момент мои треки ещё нигде не опубликованы, кроме платформы YouTube</p>
+                            <p>В ближайшем будущем я планирую загрузить свои композиции на все площадки!</p>
                         </div>
                     </div>
                 </div>
