--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -258,7 +258,16 @@
             #about, #portfolio {
                 padding: 3rem 0;
             }
+           
+            .portfolio-col {
+            flex: 0 0 50%;
+            max-width: 50%;
         }
+            .portfolio-col {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+      }
     </style>
 </head>
 <body>
