--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -267,6 +267,18 @@
             flex: 0 0 100%;
             max-width: 100%;
         }
+          .footer-col {
+            text-align: center;
+        }
+        
+        .social-icons {
+            justify-content: center;
+            display: flex;
+        }
+        
+        .footer-links {
+            text-align: center;
+        }
       }
     </style>
 </head>
