--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -196,6 +196,7 @@
             padding: 3rem 0;
             width: 100%;
             margin: 0;
+           margin-top: auto;
         }
         
         .footer-container {
