--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -197,6 +197,7 @@
             width: 100%;
             margin: 0;
            margin-top: auto;
+         flex-shrink: 0;
         }
         
         .footer-container {
