--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -23,13 +23,13 @@
             color: #333;
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
+            height:100%;
             margin: 0;
             padding: 0;
             overflow-x:hidden;
         }
        main{
-         flex:1;
+         flex:1 0 auto;
        }
         .container{
             max-width: 1200px;
