--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -197,7 +197,7 @@
             padding: 3rem 0;
             width: 100%;
             margin: 0;
-           margin-top: auto;
+           margin-top: 0;
            flex-shrink: 0;
            margin-bottom:0;
         }
