--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Использование inline-block</title>
 
     <style>
@@ -39,7 +39,7 @@
 
   <body>
     <div class="wrap">
-      <div id="left">left<br />left<br />left<br />left<br />left</div>
+      <div id="left">left<br >left<br >left<br >left<br >left</div>
       <div id="center">
         center text text text text text text text text text text text text text
         text text text text text text text text text text text text text text
@@ -64,7 +64,7 @@
         text text text text text text text text text text text text text text
         text text text text
       </div>
-      <div id="right">right<br />right<br />right<br />right</div>
+      <div id="right">right<br >right<br >right<br >right</div>
     </div>
   </body>
 </html>
