--- a/lab5/lab5_4.html
+++ b/lab5/lab5_4.html
@@ -24,7 +24,7 @@
             box-sizing:border-box;
 	    width:200px;
             background: #ccf; 
-            
+            flex-shrink:0;
         }
 
         #center-flex {
@@ -37,7 +37,7 @@
             box-sizing:border-box;
 	    width:200px; 
             background: #fcc; 
-            
+            flex-shrink:0;
         }
     </style>
 </head>
