--- a/index.html
+++ b/index.html
@@ -70,5 +70,18 @@
    </li>
     </ol>
 </ol>
+
+  <h1> Лабораторные работы  Javas cript</h1>
+  <ol>
+<li> <p>Лабораторная работа №1</p>
+  <ul>
+  
+  <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, работа с текстом)</a></li>
+  <li><a href = "lab1/lab1_2.html">Задание 2 </a></li>
+ 
+    </ul>
+    </li>
+  </ol>
+  
 </body>
 
