--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <li> <p>Лабораторная работа №1</p>
   <ul>
   
-  <li><a href ="lab8/lab8_1.html">Задание 1 </a></li>
+  <li><a href ="lab8_1/lab8_1.html">Задание 1 </a></li>
  
  
     </ul>
