--- a/lab8_1/lab8_1.html
+++ b/lab8_1/lab8_1.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
+            background:url('patek.svg')
         }
         .container {
             max-width: 400px;
