--- a/lab8_1/lab8_1.html
+++ b/lab8_1/lab8_1.html
@@ -11,6 +11,10 @@
             line-height: 1.6;
             background:url('patek.svg')
         }
+        h1{
+            align:center;
+            color:red;
+        }
         .container {
             max-width: 400px;
             margin: 0 auto;
@@ -56,7 +60,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Пенсионный калькулятор</h1>
+        <h1>Пенсионный <b>калькулятор</b></h1>
         <form id="pensionForm">
             <div class="form-group">
                 <label for="age">Возраст:</label>
