--- a/lab8_1/lab8_1.html
+++ b/lab8_1/lab8_1.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Пенсионный <b>калькулятор</b></h1>
+        <h1>Пенсионный <br>калькулятор</br></h1>
         <form id="pensionForm">
             <div class="form-group">
                 <label for="age">Возраст:</label>
