--- a/lab8_1/lab8_1.html
+++ b/lab8_1/lab8_1.html
@@ -11,10 +11,7 @@
             line-height: 1.6;
             background:url('patek.svg')
         }
-        h1{
-            align:center;
-            color:red;
-        }
+       
         .container {
             max-width: 400px;
             margin: 0 auto;
@@ -60,7 +57,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Пенсионный <br>калькулятор</br></h1>
+        <h1>Пенсионный калькулятор</h1>
         <form id="pensionForm">
             <div class="form-group">
                 <label for="age">Возраст:</label>
