--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <ul>
   
   <li><a href ="lab8_1/lab8_1.html">Задание 1 </a></li>
- 
+  <li><a href ="lab8_1/lab8_2.html">Задание 2 </a></li>
  
     </ul>
     </li>
